<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.shahbazahmed.loginmvvmdatabinding.viewmodels.ProfileViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/llUpdateParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="78dp"
            android:text="@string/manage_profile"
            android:textSize="24sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_phone_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:hint="@string/your_phone"
                android:inputType="phone"
                android:text="@={viewModel.phone}"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="16sp"
                app:met_iconLeft="@drawable/ic_call_white_24dp"
                app:met_primaryColor="@color/colorAccent" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_email_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/your_email"
                android:text="@{viewModel.email}"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="16sp"
                app:met_iconLeft="@drawable/ic_email_white_24dp"
                app:met_primaryColor="@color/colorAccent" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_name_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:hint="@string/your_name"
                android:text="@={viewModel.name}"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="16sp"
                app:met_iconLeft="@drawable/ic_short_text_white_24dp"
                app:met_primaryColor="@color/colorAccent" />


            <Button
                android:id="@+id/btn_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:enabled="@{viewModel.updateEnabled}"
                android:onClick="@{() -> viewModel.onUpdateClick()}"
                android:padding="12dp"
                android:text="@string/update"
                android:theme="@style/accentButton" />
        </LinearLayout>

    </LinearLayout>
</layout>
